kubernetes/apps/monitoring/openobserve/app/statefulset.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: openobserve
spec:
  selector:
    app: openobserve
  ports:
    - name: http
      port: 5080
      targetPort: http
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: openobserve
  labels:
    name: openobserve
spec:
  serviceName: openobserve
  replicas: 1
  selector:
    matchLabels:
      name: openobserve
      app: openobserve
  template:
    metadata:
      labels:
        name: openobserve
        app: openobserve
    spec:
      securityContext:
        fsGroupChangePolicy: "OnRootMismatch"
        fsGroup: 2000
        runAsUser: 10000
        runAsGroup: 3000
        runAsNonRoot: true
      containers:
        - name: openobserve
          image: o2cr.ai/openobserve/openobserve:v0.91.5
          resources:
            requests:
              cpu: 500m
              memory: 4Gi
            limits:
              memory: 12Gi
          ports:
            - containerPort: 5080
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: credential-fetcher
          emptyDir: {}
        - name: s3-credentials
          secret:
            secretName: openobserve-bucket-credentials
  volumeClaimTemplates:
    - metadata:
        name: data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: replica-block
        resources:
          requests:
            storage: 50Gi
