kubernetes/apps/monitoring/openobserve/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openobserve
spec:
  parentRefs:
    - name: main
      namespace: networking
  hostnames:
    - openobserve.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: openobserve
          port: 5080
